--- a/product.html
+++ b/product.html
@@ -5,10 +5,14 @@
         <title>TokoTuku</title>
     </head>
     <body>
+<!-- Header -->
         <header>
+            <!-- Logo -->
             <div class="logo">
                 <h1><a href="home.html">TokoTuku</a></h1>
             </div>
+            <!-- End Logo -->
+            <!-- Navbar -->
             <nav>
                 <ul>
                     <li><a href="home.html">Home</a></li>
@@ -17,13 +21,16 @@
                     <li><a href="signin.html">Log Out</a></li>
                 </ul>
             </nav>
+            <!-- End Navbar -->
         </header>
+<!-- End Header -->
 
         <form>
             <input class="search" type="text" placeholder="search..." required>	
             <input class="button" type="button" value="search">	
         </form>
 
+<!-- Content Product -->
         <div class="content">
             <div class="product-img">
                 <img src="img/1.jpeg">
@@ -98,10 +105,13 @@
             </div>
 
         </div>
+<!-- End Content Product -->
 
+<!-- Footer -->
         <footer>
             <p>Created by Group 7</p>
         </footer>
+<!-- End Footer -->
 
     </body>
 
